Add experimental google font

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     <link rel="icon"
           type="image/x-icon"
           href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two"
+          rel="stylesheet">
 </head>
 
 <body>
